# netprov

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/assets/: main.css
crates/app/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: ble.rs  cli.rs  client.rs  commands.rs  lib.rs  main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: auth.rs  codec.rs  dto.rs  error.rs  framing.rs  lib.rs  message.rs  transport.rs  uuids.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: ble.rs  client.rs  lib.rs  ops.rs
crates/server/: Cargo.toml  build.rs
crates/server/packaging/debian/: postinst  postrm  prerm
crates/server/src/: facade.rs  facade_mock.rs  facade_nmrs.rs  key.rs  keygen.rs  lib.rs  logging.rs  main.rs  notify.rs  rate_limit.rs  server_loop.rs  session.rs  transport.rs  validate.rs
crates/server/src/ble/: conn.rs  gatt.rs  mod.rs  server.rs  uuids.rs
crates/server/tests/: live_ble_e2e.rs  loopback.rs
docs/superpowers/plans/: 2026-04-23-netprov-part-1-core.md  2026-04-23-netprov-part-2-ble-systemd-deb.md  2026-07-16-netprov-review-remediation.md
docs/superpowers/specs/: 2026-04-23-netprov-design.md
packaging/: README.md  SMOKE-TEST.md  netprovd.service
