[workspace]
resolver = "2"
members = [
  "crates/protocol",
  "crates/server",
  "crates/sdk",
  "crates/client",
  "crates/app",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95"
authors = ["Richard Osterloh <richard.osterloh@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
  "io-util",
  "fs",
  "signal",
] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
ciborium = "0.2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-journald = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
rand = "0.8"
proptest = "1"
tokio-util = { version = "0.7", features = ["codec"] }
ipnet = "2"
bluer = { version = "0.17", features = ["bluetoothd", "l2cap"] }
sd-notify = "0.5"
futures-util = "0.3"

[profile.release]
lto = "thin"
strip = true
