[workspace]
resolver = "2"
members = [
  "crates/protocol",
  "crates/server",
  "crates/sdk",
  "crates/client",
  "crates/app",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95"
authors = ["Richard Osterloh <richard.osterloh@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1.52.3", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
  "io-util",
  "fs",
  "signal",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
ciborium = "0.2.2"
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-journald = "0.3.2"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
hmac = "0.12.1"
sha2 = "0.10.9"
subtle = "2.6.1"
rand = "0.8.6"
proptest = "1.11.0"
tokio-util = { version = "0.7.18", features = ["codec"] }
ipnet = "2.12.0"
bluer = { version = "0.17.4", features = ["bluetoothd", "l2cap"] }
sd-notify = "0.5.0"
futures-util = "0.3.32"

[profile.release]
lto = "thin"
strip = true
