[package]
name = "netprov-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "netprov-app"
path = "src/main.rs"
required-features = ["desktop"]

[features]
default = []
desktop = ["dep:dioxus", "netprov-sdk/ble"]

[dependencies]
dioxus = { version = "0.7.9", features = ["desktop"], optional = true }
netprov-protocol = { path = "../protocol" }
netprov-sdk = { path = "../sdk" }
tokio.workspace = true
