[package]
name = "netprov-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "netprov"
path = "src/main.rs"

[dependencies]
netprov-protocol = { path = "../protocol" }
netprov-server = { path = "../server", features = ["mock"], optional = true }
tokio.workspace = true
serde.workspace = true
ciborium.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
hmac.workspace = true
sha2.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
ipnet = { workspace = true, features = ["serde"] }

[features]
default = []
loopback = ["dep:netprov-server"]
