[package]
name = "netprov-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "netprov"
path = "src/main.rs"

[dependencies]
netprov-protocol = { path = "../protocol" }
netprov-server = { path = "../server", features = ["mock"], optional = true }
netprov-sdk = { path = "../sdk" }
tokio = { workspace = true, features = ["net"] }
anyhow.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["env"] }
ipnet = { workspace = true, features = ["serde"] }

[features]
default = []
dev-tcp = ["netprov-sdk/dev-tcp"]
loopback = ["dep:netprov-server", "dev-tcp"]
ble = ["netprov-sdk/ble"]
