[package]
name = "netprov-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_bytes.workspace = true
ciborium.workspace = true
thiserror.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
ipnet = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["io-util"] }

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "rt"] }
