[package]
name = "netprov-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "netprovd"
path = "src/main.rs"

[features]
default = ["mock"]
mock = []
live-nm = ["dep:nmrs", "dep:zbus"]
live-ble = ["dep:bluer", "dep:futures-util", "dep:sd-notify", "live-nm"]
live-nm-destructive = ["live-nm"]

[dependencies]
netprov-protocol = { path = "../protocol" }
tokio = { workspace = true, features = ["net"] }
serde.workspace = true
ciborium.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-journald.workspace = true
async-trait.workspace = true
clap.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
rand.workspace = true
tokio-util.workspace = true
ipnet = { workspace = true, features = ["serde"] }
qrcode = "0.14"
base64 = "0.22"

nmrs = { version = "2.3", optional = true }
zbus = { version = "5", optional = true }
bluer = { workspace = true, optional = true }
sd-notify = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest.workspace = true
tempfile = "3"
netprov-client = { path = "../client" }

[package.metadata.deb]
name = "netprov"
maintainer = "Richard Osterloh <richard.osterloh@gmail.com>"
depends = "bluez, network-manager, libdbus-1-3"
section = "net"
priority = "optional"
extended-description = """
netprov provides a BLE GATT interface for configuring network settings on
headless embedded Linux devices. Includes both the netprovd daemon and the
netprov client CLI.
"""
assets = [
    ["target/release/netprovd", "usr/bin/", "755"],
    ["target/release/netprov",  "usr/bin/", "755"],
    ["../../packaging/netprovd.service", "lib/systemd/system/", "644"],
    ["../../packaging/README.md", "usr/share/doc/netprov/", "644"],
]
conf-files = []
maintainer-scripts = "packaging/debian/"
features = ["live-ble", "live-nm"]

[package.metadata.deb.systemd-units]
unit-scripts = "packaging/"
enable = false
start = false
